Modularize further
moved domain classes to the domain module
created application module.