@@ -49,3 +49,9 @@ Implement a console-based social networking application (similar to Twitter) sat
 **IMPORTANT:**  Implement the requirements focusing on **writing the best code** you can produce.
 
 **CODE SUBMISSION:** Add the code to your own Github account and send us the link.
+
+```$sh
+rm -rf outcli/*;javac -d outcli --module-source-path src/modules -m domain,vuilbak,application
+javac -d out -cp outcli/domain:outcli/application  src/main/java/**/*.java
+java --module-path outcli -cp out --add-modules domain,application io.tripled.social.client.SocialNetworkApplication
+```
